// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromotionCard should handle "promotionType" prop 1`] = `
<div>
  <div
    class="root"
    data-testid="promotion-card"
  >
    <a
      class="link"
    >
      <div
        class="banner"
      >
        <img
          alt="Hello, world!"
          class="image"
          src="https://www.images.com/123"
        />
        <div
          class="banner-content"
        >
          <div
            class="discount"
            data-testid="promotion-card:banner-discount"
          >
            скидки до
            <div
              class="percent"
            >
              23
              %
            </div>
          </div>
        </div>
      </div>
      <div
        class="info"
      >
        <div
          class="header"
        >
          <h4
            class="title"
          >
            Hello, world!
          </h4>
          <p
            class="subtitle"
          >
            Foo, bar, baz...
          </p>
        </div>
        <div
          class="footer"
        >
          <div
            class="name"
            data-testid="promotion-card:name"
          >
            Скидка за объём
          </div>
          <time
            data-testid="promotion-card:due-date"
          >
            до 1 янв
          </time>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`PromotionCard should have placeholder component property 1`] = `
<div>
  <div
    data-testid="promotion-card:placeholder"
  >
    <div
      class="part banner"
    />
    <div
      class="part text"
    />
    <div
      class="part text"
    />
  </div>
</div>
`;

exports[`PromotionCard should renders correctly 1`] = `
<div>
  <div
    class="root"
    data-testid="promotion-card"
  >
    <a
      class="link"
    >
      <div
        class="banner"
      >
        <img
          alt="Hello, world!"
          class="image"
          src="https://www.images.com/123"
        />
      </div>
      <div
        class="info"
      >
        <div
          class="header"
        >
          <h4
            class="title"
          >
            Hello, world!
          </h4>
          <p
            class="subtitle"
          >
            Foo, bar, baz...
          </p>
        </div>
        <div
          class="footer"
        >
          <time
            data-testid="promotion-card:due-date"
          >
            до 1 янв
          </time>
        </div>
      </div>
    </a>
  </div>
</div>
`;
